Updated 2023 Day 5 to use TreeMap